# herb

./: .clang-format  .clang-format-ignore  .clang-tidy  .envrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .rubocop.yml  Aptfile  Brewfile  Brewfile.lock.json  CONTRIBUTING.md  Doxyfile  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  Steepfile  compile.sh  compile_flags.txt  config.yml  erbx.gemspec  herb.gemspec  nx.json  oxlint.json  package.json  printer.md  project.json  workspace.json
.doxygen/: frame.css  frame.js  header.html
.github/: dependabot.yml  labeler.yml
.vitepress/: config.mts
docs/: .gitignore  index.md  package.json  project.json  specification.md
examples/: begin.html.erb  block.html.erb  block_comment.html.erb  case_children.html.erb  case_in.html.erb  case_when.html.erb  (+17 more)
rust/: Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
rust/.cargo/: config.toml
rust/src/: convert.rs  ffi.rs  herb.rs  lex_result.rs  lib.rs  location.rs  main.rs  parse_result.rs  position.rs  range.rs  token.rs
rust/src/ast/: mod.rs
rust/tests/: cli_commands_test.rs  error_handling_test.rs  node_field_test.rs  parse_result_test.rs  snapshot_test.rs  tree_inspect_test.rs
rust/tests/common/: mod.rs
rust/tests/fixtures/: test.html.erb
rust/tests/snapshots/: snapshot_test__extract_html_output.snap  snapshot_test__extract_ruby_output.snap  snapshot_test__herb_version_output.snap  snapshot_test__lex_output.snap  snapshot_test__parse_output.snap  snapshot_test__prism_version_output.snap  snapshot_test__version_output.snap
(+1595 files in other folders)
