[package]
name = "herb"
version = "0.7.5"
edition = "2021"
authors = ["Marco Roth <marco.roth@intergga.ch>"]
description = "Rust bindings for Herb"
readme = "README.md"
license = "MIT"
repository = "https://github.com/marcoroth/herb"
keywords = ["erb", "html", "html+erb", "ruby", "rails"]
categories = ["parser-implementations", "development-tools"]

[lib]
name = "herb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "herb-rust"
path = "src/main.rs"

[dependencies]
libc = "0.2"
colored = "3"

[dev-dependencies]
insta = "1.40"
cargo-insta = "1.43.2"

[build-dependencies]
cc = "1.0"
glob = "0.3"
bindgen = "0.70"
